Theme: Avoid unintended bleeding image

--- a/themes/TLM2021/static/style.css
+++ b/themes/TLM2021/static/style.css
@@ -114,7 +114,7 @@ img.straight-corners {
     margin-bottom: 2rem;
 }
 
-@media (min-width: 650px) {
+@media (min-width: 750px) {
     .content img {
         position: relative;
         width: 110%;
